--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* base styles */
+body {
+  @apply bg-sandy-brown
+}
+
+/* nav styles */
+/* nav {
+  @apply bg-white border-gray-200 dark:bg-gray-900
+}
+nav div {
+  @apply max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4
+}
+nav div a {
+  @apply flex items-center
+}
+nav div a span {
+  @apply self-center text-2xl font-semibold whitespace-nowrap dark:text-white
+} */
