--- a/app/globals.css
+++ b/app/globals.css
@@ -7,16 +7,16 @@ body {
   @apply bg-sandy-brown
 }
 
-/* nav styles */
-/* nav {
-  @apply bg-white border-gray-200 dark:bg-gray-900
+/* feedback */
+.error {
+  @apply 
+    border-2 
+    border-red-500 
+    bg-red-300
+    text-red-800 
+    py-1 px-2 
+    rounded-sm
+    block
+    max-w-fit
+    my-4 mx-auto;
 }
-nav div {
-  @apply max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4
-}
-nav div a {
-  @apply flex items-center
-}
-nav div a span {
-  @apply self-center text-2xl font-semibold whitespace-nowrap dark:text-white
-} */
